# work-plan-by-calendar

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  DOCKER_GUIDE.md  Dockerfile  Makefile  README.md  README_en.md  backend_suggest.md  build-app.sh  docker-compose.yml  frontend_suggest.md  generate_test_data.py  main.py  pyproject.toml  start_server.py
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.specify/memory/: constitution.md
.specify/templates/: checklist-template.md  plan-template.md  spec-template.md  tasks-template.md
backend/: __init__.py  data_export_service.py  date_calculator.py  google_auth_service.py  main.py  models.py  plan_service.py  settings_service.py  sync_service.py
backend/routers/: __init__.py  auth.py  data.py  dependencies.py  plans.py  settings.py  storage.py  sync.py
backend/storage/: __init__.py  base.py  google_drive.py  local.py
data/Day/: 20250701.md  (+2 more)
detail_spec/: 01_data_structure_design.md  02_backend_api_design.md  03_frontend_ui_design.md  04_test_data_specification.md
docs/: google-cloud-setup.md
frontend/: index.html  test_theme.html
scripts/: README.md  docker-backup.sh  docker-monitor.sh  docker-restore.sh  docker-update.sh
snapshot/: README.md  auto_screenshots.sh  capture_screenshots.sh  index.html  screenshot_guide.md  screenshot_report.md  settings_test.html  test_settings.html
spec/: plan_relayout.md  version_0_0_1.md
tests/: test_data_export_service.py  test_google_auth.py  test_google_drive.py  test_storage_provider.py
(+74 files in other folders)
